--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,4 @@
 [tool.monas]
-packages = ["mockhouse", "mockpip"]
+packages = ["mockhouse", "mockpip", "variant-combinations"]
 version = "0.0.1"
 python-version = "3.13"
