--- a/.github/workflows/hourly_repo_update.yml
+++ b/.github/workflows/hourly_repo_update.yml
@@ -4,11 +4,6 @@ name: Periodic Repo Update
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
   schedule:
     - cron: '0 * * * *'
 
@@ -45,7 +40,7 @@ jobs:
         run: |
           git pull --recurse-submodules
           git submodule update --remote --recursive
-          git submodule foreach git pull origin main
+          git submodule foreach 'if [ "$name" = "mockhouse" ]; then git pull origin server; else git pull origin main; fi'
 
       # Upload the update to github
       - name: Commit update
