--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "makefile.configureOnOpen": false
+    "makefile.configureOnOpen": false,
+    "python.analysis.extraPaths": [
+        "${workspaceFolder}/pkg_variantlib",
+    ],
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
 }
