--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,12 @@
 [tool.monas]
 packages = [
-    "pkg_mockpip",
+    "pip",
     "pkg_variantlib[dev,test]",
-    "pkg_variantbuild[dev,test]",
-    "variant-combinations",
+    # "pkg_variantbuild[dev,test]",
+    # "variant-combinations",
 ]
 version = "0.0.1"
 python-version = "3.13"
-
-# # This is configuration specific to the `setuptools` build backend.
-# # If you are using a different build backend, you will need to change this.
-# [tool.setuptools]
-# # If there are data files included in your packages that need to be
-# # installed, specify them here.
-# package-data = {"sample" = ["*.dat"]}
 
 [tool.isort]
 profile = "black"
