--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dev-dependencies = [
     "wheel>=0.45",
     "pip",
     "variantbuild[dev,test]",
-    "variantlib[dev,test]",
+    "variantlib[user,dev,test]",
     "twine"
 ]
 package = false
@@ -147,6 +147,8 @@ ignore = [
     # Deactivated because it can make the code slow:
     # https://github.com/astral-sh/ruff/issues/7871
     "C901", # Checks for function definitions that include too many statements.
+    "PLR0912",  # Checks for functions or methods with too many branches, including (nested) if, 
+    # elif, and else branches, for loops, try-except clauses, and match and case statements.
 ]
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
