--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,7 +18,7 @@
                 "[python]": {
                     "analysis.autoImportCompletions": true,
                     "analysis.extraPaths": [
-                        "${workspaceFolder}/pkg_variantlib"
+                        "${workspaceFolder}/variantlib"
                     ],
                     "analysis.typeCheckingMode": "basic",
                     "defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
