Adding Mockhouse Lib

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -55,7 +55,9 @@
                 // Makefile Tools
                 "ms-vscode.makefile-tools",
                 // Ruff
-                "charliermarsh.ruff"
+                "charliermarsh.ruff",
+                // Jinja
+                "samuelcolvin.jinjahtml"
             ]
         }
     },
