--- a/pep_xxx_wheel_variants/pyproject.toml
+++ b/pep_xxx_wheel_variants/pyproject.toml
@@ -7,6 +7,6 @@ name = "pep-xxx-wheel-variants"
 version = "1.0.0"
 authors = [{ name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" }]
 dependencies = [
-    "variantlib[cli] @ git+https://github.com/wheelnext/variantlib.git@main",
-    "pip @ git+https://github.com/wheelnext/pip.git@pep-xxx-wheel-variants",
+    "variantlib[cli] @ git+https://github.com/wheelnext/variantlib.git@stable",
+    "pip @ git+https://github.com/wheelnext/pip.git@pep-xxx-wheel-variants_stable",
 ]
