--- a/.gitignore
+++ b/.gitignore
@@ -161,6 +161,8 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# MacOS
 .DS_Store
 
-variant_index/
+# Local Files not to be versioned
+variants-index/
