--- a/.gitmodules
+++ b/.gitmodules
@@ -32,3 +32,7 @@
 	path = meson-python
 	url = ../meson-python
 	branch = wheel-variants
+[submodule "numpy"]
+	path = numpy
+	url = ../numpy
+	branch = wheel-variants
