Update dummy projects to follow API changes

--- a/dummy-project-meson/Makefile
+++ b/dummy-project-meson/Makefile
@@ -10,7 +10,7 @@ v0:
 
 v1:
 	$(BUILD) \
-		-Cvariant-name='fictional_hw :: architecture :: HAL9000' \
+		-Cvariant-name='fictional_hw :: architecture :: hal9000' \
 		-Cvariant-name='fictional_hw :: compute_accuracy :: 0' \
 		-Cvariant-name='fictional_hw :: compute_capability :: 6' \
 		-Cvariant-name='fictional_hw :: humor :: 2'
@@ -26,7 +26,7 @@ v2:
 
 v3:
 	$(BUILD) \
-		-Cvariant-name='fictional_tech :: quantum :: FOAM' \
+		-Cvariant-name='fictional_tech :: quantum :: foam' \
 		-Cvariant-name='fictional_tech :: risk_exposure :: 1000000000' \
 		-Cvariant-name='fictional_tech :: technology :: improb_drive'
 	> $@
@@ -37,12 +37,12 @@ v4:
 		-Cvariant-name='fictional_hw :: compute_accuracy :: 10' \
 		-Cvariant-name='fictional_hw :: compute_capability :: 10' \
 		-Cvariant-name='fictional_hw :: humor :: 0' \
-		-Cvariant-name='fictional_tech :: quantum :: FOAM'
+		-Cvariant-name='fictional_tech :: quantum :: foam'
 	> $@
 
 v5:
 	$(BUILD) \
-		-Cvariant-name='fictional_tech :: quantum :: SUPERPOSITION' \
+		-Cvariant-name='fictional_tech :: quantum :: superposition' \
 		-Cvariant-name='fictional_tech :: risk_exposure :: 25' \
 		-Cvariant-name='fictional_tech :: technology :: auto_chef'
 	> $@
