--- a/dummy-projects-flit/dummy-project/Makefile
+++ b/dummy-projects-flit/dummy-project/Makefile
@@ -39,7 +39,7 @@ build: clean ## builds source and wheel package
 		-p "fictional_hw :: compute_capability :: 4"
 
 	flit build --format wheel \
-		-p "fictional_tech :: quantum :: SUPERPOSITION" \
+		-p "fictional_tech :: quantum :: superposition" \
 		-p "fictional_tech :: risk_exposure :: 25" \
 		-p "fictional_tech :: technology :: auto_chef"
 
@@ -48,7 +48,7 @@ build: clean ## builds source and wheel package
 		-p "fictional_hw :: compute_accuracy :: 10" \
 		-p "fictional_hw :: compute_capability :: 10" \
 		-p "fictional_hw :: humor :: 0" \
-		-p "fictional_tech :: quantum :: FOAM"
+		-p "fictional_tech :: quantum :: foam"
 
 	flit build --format wheel \
 		-p "fictional_hw :: architecture :: tars" \
@@ -57,12 +57,12 @@ build: clean ## builds source and wheel package
 		-p "fictional_hw :: humor :: 10"
 
 	flit build --format wheel \
-		-p "fictional_hw :: architecture :: HAL9000" \
+		-p "fictional_hw :: architecture :: hal9000" \
 		-p "fictional_hw :: compute_accuracy :: 0" \
 		-p "fictional_hw :: compute_capability :: 6" \
 		-p "fictional_hw :: humor :: 2"
 
 	flit build --format wheel \
-		-p "fictional_tech :: quantum :: FOAM" \
+		-p "fictional_tech :: quantum :: foam" \
 		-p "fictional_tech :: risk_exposure :: 1000000000" \
 		-p "fictional_tech :: technology :: improb_drive"
