--- a/dummy-projects-flit/sandbox-project/pyproject.toml
+++ b/dummy-projects-flit/sandbox-project/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ['flit_core >=3,<4']
-build-backend = 'flit_core.buildapi'
+requires = ["flit_core >=3.11,<4"]
+build-backend = "flit_core.buildapi"
 
 [project]
 name = "sandbox-project"
